--- a/day01 expanding cards/index.html
+++ b/day01 expanding cards/index.html
@@ -12,6 +12,9 @@
 
 <body>
 
+    <div class="title">Wij houden van Oranje</div>
+
+
     <div class="container">
         <div class="panel active"
             style="background-image: url('https://images.unsplash.com/photo-1523889310790-cb91a98b017b?ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&ixlib=rb-1.2.1&auto=format&fit=crop&w=1050&q=80');">
